# motion-tracker

./: .clang-format  .gitignore  CMakeLists.txt  README.md  requirements.txt
apps/: main.cpp
benchmarks/: aarch64_benchmark_results.csv  aarch64_benchmark_results.txt  benchmark_results_analysis.ipynb
cmake/: FindDependencies.cmake  toolchain-aarch64.cmake
core/: CMakeLists.txt  pipeline.cpp  pipeline.hpp
core/types/: CMakeLists.txt  detection_result.hpp  frame.hpp
docs/: benchmark_guide.md  cross_compile.md  setup_tflite.md  streaming.md
models/: README.md
modules/detector/: CMakeLists.txt  detector.cpp  detector.hpp
modules/motion/: CMakeLists.txt  motion.cpp  motion.hpp
modules/tracker/: CMakeLists.txt  sort_tracker.cpp  sort_tracker.hpp
scripts/: bootstrap_pi.sh  build_opencv.sh  build_pi.sh  build_tflite.sh  deploy_pi_binary.sh  deploy_pi_full.sh  run_tflite_benchmarks.sh  setup_host.sh  setup_pi.sh  sync_sysroot.sh
utils/config/: CMakeLists.txt  config.cpp  config.hpp  config.yaml
utils/containers/: CMakeLists.txt  lockfree_ring_buffer.hpp
utils/metrics/: CMakeLists.txt  fps_counter.cpp  fps_counter.hpp  metrics.cpp  metrics.hpp  scoped_timer.cpp  scoped_timer.hpp
utils/paths/: CMakeLists.txt  paths.cpp  paths.hpp
utils/strings/: CMakeLists.txt  strings.cpp  strings.hpp
utils/vision/: CMakeLists.txt  draw_utils.cpp  draw_utils.hpp  vision_utils.cpp  vision_utils.hpp
